Updated file name and added some comments.

--- a/US-wildfires-MAP.ipynb
+++ b/US-wildfires-MAP.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "#drop all fires < 1000 acres\n",
+    "#drop all fires smaller than 1000 acres and show how many fires are left\n",
     "df_copy = df_copy.where(df['FIRE_SIZE'] > 1000).dropna()\n",
     "x = len(df)\n",
     "print(df_copy.shape)\n",
@@ -118,6 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Group fires by size\n",
     "small_wildfires = folium.FeatureGroup(name = '< 10000 Acres')\n",
     "medium_wildfires = folium.FeatureGroup(name = '10,000 - 50,000 Acres')\n",
     "large_wildfires = folium.FeatureGroup(name = '50,000 - 100,000 Acres')\n",
