--- a/FiresReported.ipynb
+++ b/FiresReported.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(path)\n"
+    "df = pd.read_excel(path)"
    ]
   },
   {
@@ -302,303 +302,7 @@
     }
    ],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['TotArea'] = df['arealProduktivSkogsmark_m2']+df['arealAnnanTradbevuxenMark_m2']+df['arealMarkUtanTrad_m2']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ar</th>\n",
-       "      <th>datum</th>\n",
-       "      <th>tid</th>\n",
-       "      <th>kommun</th>\n",
-       "      <th>kommunKortNamn</th>\n",
-       "      <th>verksamhetText</th>\n",
-       "      <th>sweref99Norr</th>\n",
-       "      <th>sweref99Ost</th>\n",
-       "      <th>BEJBbrandorsakText</th>\n",
-       "      <th>arealProduktivSkogsmark_m2</th>\n",
-       "      <th>arealAnnanTradbevuxenMark_m2</th>\n",
-       "      <th>arealMarkUtanTrad_m2</th>\n",
-       "      <th>TotArea</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-01-01</td>\n",
-       "      <td>00:07:00</td>\n",
-       "      <td>1272</td>\n",
-       "      <td>Bromölla</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6856.0</td>\n",
-       "      <td>-905921.0</td>\n",
-       "      <td>Fyrverkeri eller pyroteknik</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-01-01</td>\n",
-       "      <td>01:04:00</td>\n",
-       "      <td>1452</td>\n",
-       "      <td>Tranemo</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Okänd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-01-02</td>\n",
-       "      <td>01:05:00</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>Sollefteå</td>\n",
-       "      <td>Lantbruk, inte bostad</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Annan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15000</td>\n",
-       "      <td>15000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-01-02</td>\n",
-       "      <td>19:35:00</td>\n",
-       "      <td>180</td>\n",
-       "      <td>Stockholm</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Okänd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000-01-03</td>\n",
-       "      <td>12:37:00</td>\n",
-       "      <td>180</td>\n",
-       "      <td>Stockholm</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Barns lek med eld</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100302</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>01:52:00</td>\n",
-       "      <td>180</td>\n",
-       "      <td>Stockholm</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6586007.0</td>\n",
-       "      <td>664319.0</td>\n",
-       "      <td>Avsiktlig brand</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100303</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>18:56:00</td>\n",
-       "      <td>117</td>\n",
-       "      <td>Österåker</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6599203.0</td>\n",
-       "      <td>687136.0</td>\n",
-       "      <td>Avsiktlig brand</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100304</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2020-12-30</td>\n",
-       "      <td>12:32:00</td>\n",
-       "      <td>380</td>\n",
-       "      <td>Uppsala</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6637240.0</td>\n",
-       "      <td>653312.0</td>\n",
-       "      <td>Okänd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100305</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>15:17:00</td>\n",
-       "      <td>1384</td>\n",
-       "      <td>Kungsbacka</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6360762.0</td>\n",
-       "      <td>327099.0</td>\n",
-       "      <td>Annan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100306</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>23:58:00</td>\n",
-       "      <td>1082</td>\n",
-       "      <td>Karlshamn</td>\n",
-       "      <td>Verksamhet inte knuten till en byggnad</td>\n",
-       "      <td>6225774.0</td>\n",
-       "      <td>490795.0</td>\n",
-       "      <td>Avsiktlig brand</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100307 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          ar      datum       tid  kommun kommunKortNamn  \\\n",
-       "0       2000 2000-01-01  00:07:00    1272       Bromölla   \n",
-       "1       2000 2000-01-01  01:04:00    1452        Tranemo   \n",
-       "2       2000 2000-01-02  01:05:00    2283      Sollefteå   \n",
-       "3       2000 2000-01-02  19:35:00     180      Stockholm   \n",
-       "4       2000 2000-01-03  12:37:00     180      Stockholm   \n",
-       "...      ...        ...       ...     ...            ...   \n",
-       "100302  2020 2020-12-29  01:52:00     180      Stockholm   \n",
-       "100303  2020 2020-12-29  18:56:00     117      Österåker   \n",
-       "100304  2020 2020-12-30  12:32:00     380        Uppsala   \n",
-       "100305  2020 2020-12-31  15:17:00    1384     Kungsbacka   \n",
-       "100306  2020 2020-12-31  23:58:00    1082      Karlshamn   \n",
-       "\n",
-       "                                verksamhetText  sweref99Norr  sweref99Ost  \\\n",
-       "0       Verksamhet inte knuten till en byggnad        6856.0    -905921.0   \n",
-       "1       Verksamhet inte knuten till en byggnad           NaN          NaN   \n",
-       "2                       Lantbruk, inte bostad            NaN          NaN   \n",
-       "3       Verksamhet inte knuten till en byggnad           NaN          NaN   \n",
-       "4       Verksamhet inte knuten till en byggnad           NaN          NaN   \n",
-       "...                                        ...           ...          ...   \n",
-       "100302  Verksamhet inte knuten till en byggnad     6586007.0     664319.0   \n",
-       "100303  Verksamhet inte knuten till en byggnad     6599203.0     687136.0   \n",
-       "100304  Verksamhet inte knuten till en byggnad     6637240.0     653312.0   \n",
-       "100305  Verksamhet inte knuten till en byggnad     6360762.0     327099.0   \n",
-       "100306  Verksamhet inte knuten till en byggnad     6225774.0     490795.0   \n",
-       "\n",
-       "                 BEJBbrandorsakText  arealProduktivSkogsmark_m2  \\\n",
-       "0       Fyrverkeri eller pyroteknik                           0   \n",
-       "1                             Okänd                           0   \n",
-       "2                             Annan                           0   \n",
-       "3                             Okänd                           0   \n",
-       "4                 Barns lek med eld                           0   \n",
-       "...                             ...                         ...   \n",
-       "100302              Avsiktlig brand                           0   \n",
-       "100303              Avsiktlig brand                           0   \n",
-       "100304                        Okänd                           0   \n",
-       "100305                        Annan                           0   \n",
-       "100306              Avsiktlig brand                           0   \n",
-       "\n",
-       "        arealAnnanTradbevuxenMark_m2  arealMarkUtanTrad_m2  TotArea  \n",
-       "0                                  6                     0        6  \n",
-       "1                                  0                     5        5  \n",
-       "2                                  0                 15000    15000  \n",
-       "3                                  5                     0        5  \n",
-       "4                                 50                     0       50  \n",
-       "...                              ...                   ...      ...  \n",
-       "100302                             1                     0        1  \n",
-       "100303                             0                     1        1  \n",
-       "100304                             0                    20       20  \n",
-       "100305                             0                     1        1  \n",
-       "100306                             0                     1        1  \n",
-       "\n",
-       "[100307 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "df['TotArea'] = df['arealProduktivSkogsmark_m2']+df['arealAnnanTradbevuxenMark_m2']+df['arealMarkUtanTrad_m2']\n",
     "df"
    ]
   },
@@ -621,61 +325,6 @@
     "    if df[column].isnull().any():\n",
     "       print('{0} has {1} null values'.format(column, df[column].isnull().sum()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Array conditional must be same shape as self",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24688/2098242265.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#missing_coord = df[['sweref99Norr','sweref99Ost']].where(df['sweref99Norr'].isnull() or df['sweref99Ost'].isnull())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwithout_missing_coord\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sweref99Norr'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m|\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sweref99Norr'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mwithout_missing_coord\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\util\\_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    310\u001b[0m                 )\n\u001b[1;32m--> 311\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    312\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    313\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mwhere\u001b[1;34m(self, cond, other, inplace, axis, level, errors, try_cast)\u001b[0m\n\u001b[0;32m  10734\u001b[0m         \u001b[0mtry_cast\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_default\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m  10735\u001b[0m     ):\n\u001b[1;32m> 10736\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtry_cast\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m  10737\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m  10738\u001b[0m     @deprecate_nonkeyword_arguments(\n",
-      "\u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mwhere\u001b[1;34m(self, cond, other, inplace, axis, level, errors, try_cast)\u001b[0m\n\u001b[0;32m   9030\u001b[0m             )\n\u001b[0;32m   9031\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 9032\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_where\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   9033\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   9034\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Python39\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_where\u001b[1;34m(self, cond, other, inplace, axis, level, errors)\u001b[0m\n\u001b[0;32m   8769\u001b[0m                 \u001b[0mcond\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masanyarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   8770\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcond\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 8771\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Array conditional must be same shape as self\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   8772\u001b[0m             \u001b[0mcond\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_constructor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_construct_axes_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   8773\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Array conditional must be same shape as self"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#missing_coord = df[['sweref99Norr','sweref99Ost']].where(df['sweref99Norr'].isnull() or df['sweref99Ost'].isnull())\n",
-    "without_missing_coord = df.where(df['sweref99Norr'].notnull().any()|df['sweref99Norr'].notnull().any())\n",
-    "without_missing_coord"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Of columns E and N there are 20.655 % that have missing values\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = len(df)\n",
-    "print ('Of columns E and N there are',\n",
-    "       round(20718/x * 100, 3), \n",
-    "       '% that have missing values')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
