Reboot of preprocessing branch

--- a/FireRisk.ipynb
+++ b/FireRisk.ipynb
@@ -2069,7 +2069,7 @@
     }
    ],
    "source": [
-    "#Applying functions to create to new columns, Longitude and Latitude for reported fires.\n",
+    "#Applying functions to create to new columns, Longitude and Latitude for all measuring occurances in dataframe.\n",
     "sample['Latitude'] = sample.apply(lambda row: toLat(row['E'],row['N']),axis=1)\n",
     "sample['Longitude'] = sample.apply(lambda row: toLon(row['E'],row['N']),axis=1)\n",
     "sample"
