--- a/FireRisk.ipynb
+++ b/FireRisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Reading csv file from path with dtypes\n",
-    "df = pd.read_csv(path, sep=';', dtype=types, )"
+    "df = pd.read_csv(path, sep=';', dtype=types, )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19188859"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Number of rows in fire riskdataset\n",
+    "df.shape[0]"
    ]
   },
   {
@@ -385,11 +406,11 @@
    ],
    "source": [
     "#For now sample is only 50 values\n",
-    "sample = df.sample(50)\n",
+    "sample = df.head(10)\n",
     "sample[['E','N']] = df[['E','N']].fillna(0)\n",
     "sample['N'] = sample['N'].astype(int)\n",
     "sample['E'] = sample['E'].astype(int)\n",
-    "sample.head(10)"
+    "sample.head(10)\n"
    ]
   },
   {
@@ -630,7 +651,10 @@
    ],
    "source": [
     "#Data info\n",
-    "sample.describe()"
+    "sample.describe()\n",
+    "\n",
+    "\n",
+    "#Columns to drop from the dataframe: FFMC, DMC, DC, ISI, BUI, Gras, Vindhastighet"
    ]
   },
   {
@@ -2109,7 +2133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.8"
   },
   "orig_nbformat": 4
  },
