Added swedish municipalites to US-wildfires file to look at later.

--- a/US-wildfires-MAP.ipynb
+++ b/US-wildfires-MAP.ipynb
@@ -56,7 +56,9 @@
     "data_url = (\n",
     "    \"https://raw.githubusercontent.com/python-visualization/folium/master/examples/data\"\n",
     ")\n",
-    "us_states_url = f\"{data_url}/us-states.json\"\n"
+    "us_states_url = f\"{data_url}/us-states.json\"\n",
+    "\n",
+    "#https://github.com/deldersveld/topojson/blob/master/countries/sweden/sweden-municipalities.json\n"
    ]
   },
   {
