Functions added to cookiecutter folder

--- a/juptyer-notebook/FiresReportedWithRisk.ipynb
+++ b/juptyer-notebook/FiresReportedWithRisk.ipynb
@@ -414,7 +414,7 @@
     "\n",
     "#Actual merge happens here\n",
     "merged = pd.merge(fires_sample, test, how='inner', on=['kommun','datum'])\n",
-    "merged = merged.drop(columns='index')\n",
+    "#merged = merged.drop(columns='index')\n",
     "\n"
    ]
   },
