Lagt till antal bränder per FWI4 varning

--- a/FiresReportedWithRisk.ipynb
+++ b/FiresReportedWithRisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Reading csv file from path with dtypes\n",
-    "reported_fire_risk = pd.read_csv(fire_risk_path, sep=';', dtype=rtypes, )\n",
+    "reported_fire_risk = pd.read_csv(fire_risk_path, sep=';', dtype=rtypes)\n",
     "reported_fires = pd.read_excel(reported_fires_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "[17474853 rows x 9 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "[15470460 rows x 7 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "[986 rows x 17 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
        "[23913 rows x 17 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
        "[13302 rows x 17 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,20 +1681,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joel\\AppData\\Local\\Temp/ipykernel_9996/2346100680.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLLEP~1\\AppData\\Local\\Temp/ipykernel_7156/2346100680.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  above4['TotArea'] = above4['arealProduktivSkogsmark_m2']+above4['arealAnnanTradbevuxenMark_m2']+above4['arealMarkUtanTrad_m2']\n",
-      "C:\\Users\\Joel\\AppData\\Local\\Temp/ipykernel_9996/2346100680.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLLEP~1\\AppData\\Local\\Temp/ipykernel_7156/2346100680.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2086,7 @@
        "[1547 rows x 18 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,24 +2096,67 @@
     "tablesplit = above4.set_index(['datum'])\n",
     "pre2019 = tablesplit.loc['2000-1-1':'2018-12-31']\n",
     "post2018 = tablesplit.loc['2019-1-1' : '2020-12-31']\n",
+    "fires12to18 = tablesplit.loc['2012-1-1' : '2018-12-31']\n",
     "post2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11755"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prebanFires = pre2019.FWI_index.count()\n",
+    "prebanFires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1547"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "postbanFires = post2018.FWI_index.count()\n",
+    "postbanFires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Average amount of fires per year, during \"eldningförbud\" (FWI-index >= 4), before and after disposable grill ban\n",
     "#pre2019 has 11755 fires over 19 years. post2018 has 1547 fires over 2 years. Average for each periods:\n",
-    "beforeban = 11755/19\n",
-    "afterban = 1547/2"
+    "beforeban = prebanFires/19\n",
+    "afterban = postbanFires/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2165,7 @@
        "618.6842105263158"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2134,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2186,7 @@
        "773.5"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2151,6 +2194,305 @@
    "source": [
     "#Average amount of fires per year(during fire hazard warning \"eldningsförbud\") after disposable grill ban\n",
     "afterban"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creates table from the firerisktable grouped on the columns Datum and Kommun, with the median, giving us the median values of FWI_index for each Kommun and each day\n",
+    "totalfwi4 = fireRiskT.groupby(['Datum','Kommun']).median()\n",
+    "totalfwi4 = totalfwi4.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Kommun</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Tmedel</th>\n",
+       "      <th>FWI</th>\n",
+       "      <th>FWI_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1596</th>\n",
+       "      <td>2000-04-06</td>\n",
+       "      <td>1907</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>17.20</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7866</th>\n",
+       "      <td>2000-04-29</td>\n",
+       "      <td>683</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>18.70</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7873</th>\n",
+       "      <td>2000-04-29</td>\n",
+       "      <td>763</td>\n",
+       "      <td>26.50</td>\n",
+       "      <td>18.40</td>\n",
+       "      <td>18.05</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7874</th>\n",
+       "      <td>2000-04-29</td>\n",
+       "      <td>764</td>\n",
+       "      <td>26.30</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>17.85</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7875</th>\n",
+       "      <td>2000-04-29</td>\n",
+       "      <td>765</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>18.40</td>\n",
+       "      <td>17.60</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108775</th>\n",
+       "      <td>2020-09-25</td>\n",
+       "      <td>509</td>\n",
+       "      <td>16.70</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>18.55</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108777</th>\n",
+       "      <td>2020-09-25</td>\n",
+       "      <td>513</td>\n",
+       "      <td>17.30</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>18.15</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108778</th>\n",
+       "      <td>2020-09-25</td>\n",
+       "      <td>560</td>\n",
+       "      <td>17.15</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>18.30</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108800</th>\n",
+       "      <td>2020-09-25</td>\n",
+       "      <td>687</td>\n",
+       "      <td>16.60</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1111066</th>\n",
+       "      <td>2020-10-03</td>\n",
+       "      <td>1083</td>\n",
+       "      <td>15.90</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101586 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Datum  Kommun   Temp  Tmedel    FWI  FWI_index\n",
+       "1596    2000-04-06    1907   7.70    3.00  17.20        4.0\n",
+       "7866    2000-04-29     683  25.70   18.70  17.80        4.0\n",
+       "7873    2000-04-29     763  26.50   18.40  18.05        4.0\n",
+       "7874    2000-04-29     764  26.30   18.45  17.85        4.0\n",
+       "7875    2000-04-29     765  25.70   18.40  17.60        4.0\n",
+       "...            ...     ...    ...     ...    ...        ...\n",
+       "1108775 2020-09-25     509  16.70   12.00  18.55        4.0\n",
+       "1108777 2020-09-25     513  17.30   10.00  18.15        4.0\n",
+       "1108778 2020-09-25     560  17.15   11.00  18.30        4.0\n",
+       "1108800 2020-09-25     687  16.60   11.00  18.45        4.0\n",
+       "1111066 2020-10-03    1083  15.90   15.00  17.80        4.0\n",
+       "\n",
+       "[101586 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Gives us table with for all the times FWI_index was => 4 (eldningsförbud)\n",
+    "above4risk = totalfwi4[totalfwi4['FWI_index']>=4]\n",
+    "above4risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creates two tables for the two periods (before and after disposable grill ban)\n",
+    "riskoverperiod = above4risk.set_index(['Datum'])\n",
+    "pre2019risk = riskoverperiod.loc['2000-1-1':'2018-12-31']\n",
+    "post2018risk = riskoverperiod.loc['2019-1-1' : '2020-12-31']\n",
+    "risk12to18 = riskoverperiod.loc['2012-1-1' : '2018-12-31']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89504"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total number of FWI_index => 4 (eldningsförbud) during the period before the ban\n",
+    "prebanFWI4 = pre2019risk.FWI_index.count()\n",
+    "prebanFWI4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12082"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total number of FWI_index => 4 (eldningsförbud) after the ban\n",
+    "postbanFWI4 = post2018risk.FWI_index.count()\n",
+    "postbanFWI4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13133491240614945"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Number of fires during FWI_index => 4 (eldningförbud) divided by the total number of FWI_index => 4 for the period before ban\n",
+    "#Gives us insight as to wether or not the ban has had any effect on the amount of fires during FWI_index => 4 (eldningsförbud)\n",
+    "firesPerIndex4pre = prebanFires/prebanFWI4\n",
+    "firesPerIndex4pre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12804171494785632"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "firesPerIndex4post = postbanFires/postbanFWI4\n",
+    "firesPerIndex4post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13889366088300978"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fires12to18.FWI_index.count()/risk12to18.FWI_index.count()"
    ]
   },
   {
@@ -2180,7 +2522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.9"
   },
   "orig_nbformat": 4
  },
