yday figure created

--- a/juptyer-notebook/FiresReportedWithRisk.ipynb
+++ b/juptyer-notebook/FiresReportedWithRisk.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "#Reading csv file from path with dtypes\n",
-    "reported_fire_risk = pd.read_csv(fire_risk_path, sep=';', dtype=rtypes, )\n",
+    "reported_fire_risk = pd.read_csv(fire_risk_path, sep=';', dtype=rtypes )\n",
     "reported_fires = pd.read_excel(reported_fires_path)"
    ]
   },
