Kommenterat och städat lite i FiresReportedWithRisk

--- a/FiresReportedWithRisk.ipynb
+++ b/FiresReportedWithRisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +85,7 @@
     }
    ],
    "source": [
+    "#Check to see number of null values in each column of the firerisk data\n",
     "print(risk_sample.isnull().sum(axis = 0))\n",
     "print(\"Total rows: \")\n",
     "print(risk_sample.shape[0])"
@@ -92,10 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fills the two rows missing E and N with 0 instead of null\n",
     "risk_sample[['E','N']] = risk_sample[['E','N']].fillna(0)\n",
     "risk_sample['N'] = risk_sample['N'].astype(int)\n",
     "risk_sample['E'] = risk_sample['E'].astype(int)"
@@ -103,17 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Drops NaN values from FWI and Tmedel columns\n",
     "risk_sample.dropna(subset=['FWI'], how='all', inplace=True)\n",
     "risk_sample.dropna(subset=['Tmedel'], how='all', inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +153,8 @@
     }
    ],
    "source": [
+    "#Check again to see that E, N, Tmedel and FWI no longer contains null values.\n",
+    "#Also counts total number of row to see how many we lost during this stage of preprocessing\n",
     "print(risk_sample.isnull().sum(axis = 0))\n",
     "print(\"Total rows: \")\n",
     "print(risk_sample.shape[0])"
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +365,13 @@
        "[17474853 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Drops all columns stated. These were not necessary to keep since we still had the FWI values\n",
     "fireRisk = risk_sample.drop(columns=['Nederbord',\n",
     "       'RH', 'Vindhastighet', 'Vindriktning', 'FFMC', 'DMC', 'DC', 'ISI',\n",
     "       'BUI', 'HBV_o', 'HBV_u', 'HBV', 'HBV_index',\n",
@@ -375,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -561,23 +567,24 @@
        "[15470460 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Removed the rows which had a FWI_index of -1. This index value is used by the Swedish Civil Contingencies Agency to mark the \"off season\" for fire risk\n",
     "fireRiskT = fireRiskT[fireRiskT.FWI_index != -1]\n",
     "fireRiskT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Grouping by Kommun and date (YYYY-MM-DD) and converting rest of values to mean values.\n",
+    "#Grouping by date (YYYY-MM-DD) and Kommun and converting rest of values to mean values.\n",
     "test = fireRiskT.groupby(['Datum','Kommun']).median()\n",
     "test = test.reset_index()\n",
     "test = test.rename(columns={\"Datum\": \"datum\", \"Kommun\":\"kommun\"})"
@@ -585,20 +592,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#Actual merge happens here\n",
     "merged = pd.merge(fires_sample, test, how='inner', on=['kommun','datum'])\n",
-    "#merged = merged.drop(columns='index')\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -936,15 +943,15 @@
        "[986 rows x 17 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#The code here was to let us see how many years were missing values for the winter months, and to help us decide what to do with these months\n",
+    "#It resulted in us dropping all rows with -1 in the FWI_index column\n",
     "merged['month'] = merged['datum'].dt.month\n",
-    "#winterseason = merged[merged['month' == 11, 'month' == 12, 'month' == 1 , 'month' == 2]]\n",
     "months = [10, 11, 12, 1]\n",
     "winterseason = merged[merged['month'].isin(months)]\n",
     "winterseason.sort_values(by= 'datum', ascending = False)"
@@ -952,18 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Method to replace all -1 values in FWI-index with NaN\n",
-    "\n",
-    "#merged['FWI_index'] = merged['FWI_index'].replace([-1.0],np.nan)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1301,20 +1297,20 @@
        "[23913 rows x 17 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#It might be interesting to look at the days where the fires of the municipalities FWI_index is above 4\n",
+    "#Lets look at the days where the fires of the municipalities FWI_index is above or equal to 4 (corresponds to when there is a fire ban, or \"Eldningsförbud\")\n",
     "above4 = merged[merged['FWI_index']>=4]\n",
     "above4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1663,13 +1659,13 @@
        "[13302 rows x 17 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Filter cause to only include campfire and BBQ\n",
+    "#Filter to only include campfire and BBQ (by removing all the other categories listed below)\n",
     "above4 = filter_rows_by_values(above4, 'BEJBbrandorsakText', ['Fyrverkeri eller pyroteknik', 'Annan',\n",
     "       'Barns lek med eld', 'Annan eldning', 'Avsiktlig brand',\n",
     "       'Övriga gnistor',\n",
@@ -1704,7 +1700,9 @@
     }
    ],
    "source": [
+    "#Creates a new column containing the total area that was on fire by combining the three fire area categories. Is in square meters\n",
     "above4['TotArea'] = above4['arealProduktivSkogsmark_m2']+above4['arealAnnanTradbevuxenMark_m2']+above4['arealMarkUtanTrad_m2']\n",
+    "#Creates a new column from total are of fire and converts the square meterage to hectares (1 hectare = 10 000 m2)\n",
     "above4['Hectares'] = above4['TotArea']/10000"
    ]
   },
@@ -2117,6 +2115,7 @@
     }
    ],
    "source": [
+    "#Gives us the number of fires during fire bans for the years before the disposable grill ban (2000-2018)\n",
     "prebanFires = pre2019.FWI_index.count()\n",
     "prebanFires"
    ]
@@ -2138,6 +2137,7 @@
     }
    ],
    "source": [
+    "#Gives us the number of fires during fire bans for the years after the disposable grill ban (2019-2020)\n",
     "postbanFires = post2018.FWI_index.count()\n",
     "postbanFires"
    ]
@@ -2148,7 +2148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Average amount of fires per year, during \"eldningförbud\" (FWI-index >= 4), before and after disposable grill ban\n",
+    "#Average amount of fires per year, during fire bans \"eldningförbud\" (FWI-index >= 4), before and after disposable grill ban\n",
     "#pre2019 has 11755 fires over 19 years. post2018 has 1547 fires over 2 years. Average for each periods:\n",
     "beforeban = prebanFires/19\n",
     "afterban = postbanFires/2"
@@ -2384,6 +2384,7 @@
     "riskoverperiod = above4risk.set_index(['Datum'])\n",
     "pre2019risk = riskoverperiod.loc['2000-1-1':'2018-12-31']\n",
     "post2018risk = riskoverperiod.loc['2019-1-1' : '2020-12-31']\n",
+    "#Third table created just to check how different the numbers would be for another random period\n",
     "risk12to18 = riskoverperiod.loc['2012-1-1' : '2018-12-31']"
    ]
   },
@@ -2448,7 +2449,7 @@
     }
    ],
    "source": [
-    "#Number of fires during FWI_index => 4 (eldningförbud) divided by the total number of FWI_index => 4 for the period before ban\n",
+    "#Number of fires during FWI_index => 4 (eldningförbud) divided by the total number of FWI_index => 4 for the period before the ban\n",
     "#Gives us insight as to wether or not the ban has had any effect on the amount of fires during FWI_index => 4 (eldningsförbud)\n",
     "firesPerIndex4pre = prebanFires/prebanFWI4\n",
     "firesPerIndex4pre"
@@ -2471,6 +2472,8 @@
     }
    ],
    "source": [
+    "#Number of fires during FWI_index => 4 (eldningförbud) divided by the total number of FWI_index => 4 for the period after the ban\n",
+    "#Gives us insight as to wether or not the ban has had any effect on the amount of fires during FWI_index => 4 (eldningsförbud)\n",
     "firesPerIndex4post = postbanFires/postbanFWI4\n",
     "firesPerIndex4post"
    ]
@@ -2492,6 +2495,7 @@
     }
    ],
    "source": [
+    "#The same thing as above but with the random period\n",
     "fires12to18.FWI_index.count()/risk12to18.FWI_index.count()"
    ]
   },
