Geoplotting almost compelte, just needs a few changes to get correct values

--- a/juptyer-notebook/US-wildfires-MAP.ipynb
+++ b/juptyer-notebook/US-wildfires-MAP.ipynb
@@ -58,7 +58,9 @@
     ")\n",
     "us_states_url = f\"{data_url}/us-states.json\"\n",
     "\n",
-    "#https://github.com/deldersveld/topojson/blob/master/countries/sweden/sweden-municipalities.json\n"
+    "\"https://github.com/deldersveld/topojson/blob/master/countries/sweden/\"\n",
+    "\n",
+    "sweden-municipalities.json\n"
    ]
   },
   {
@@ -66,7 +68,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "data_url = (\n",
+    "    \"https://github.com/deldersveld/topojson/blob/master/countries/sweden/\"\n",
+    ")\n",
+    "swedish_municipalities = f\"{data_url}/sweden-municipalities.json\""
+   ]
   },
   {
    "cell_type": "code",
